# open-datasets

./: .gitignore  README.md
conversational-ai-dataset/: .gitignore  CHANGELOG.md  DATASET_README.md  PROJECT_INFO.md  README.md  pyproject.toml  requirements.txt  setup.py
conversational-ai-dataset/configs/: dataset_config.yaml
conversational-ai-dataset/data/processed/: combined_dataset.jsonl
conversational-ai-dataset/data/raw/: multi_turn_conversations.jsonl  single_turn_conversations.jsonl
conversational-ai-dataset/data/splits/: test_alpaca.jsonl  test_chatml.jsonl  test_simple.jsonl  train_alpaca.jsonl  train_chatml.jsonl  train_simple.jsonl  val_alpaca.jsonl  val_chatml.jsonl  val_simple.jsonl
conversational-ai-dataset/docs/: technical_documentation.md
conversational-ai-dataset/examples/: __init__.py  basic_usage.py  training_integration.py
conversational-ai-dataset/src/: __init__.py
conversational-ai-dataset/src/tools/: __init__.py  data_preprocessor.py  dataset_analyzer.py
conversational-ai-dataset/src/utils/: __init__.py
conversational-ai-dataset/tests/: __init__.py  test_data_preprocessor.py  test_dataset_analyzer.py
