[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "conversational-ai-dataset"
version = "1.0.0"
description = "High-quality conversational dataset for training transformer AI models"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Adrian Paredez", email = "contact@paredez.dev"},
]
keywords = [
    "artificial intelligence",
    "machine learning", 
    "natural language processing",
    "conversational ai",
    "dataset",
    "training data",
    "transformer",
    "gpt",
    "chatbot",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research", 
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.7"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
]
analysis = [
    "matplotlib>=3.3",
    "seaborn>=0.11", 
    "pandas>=1.2",
    "numpy>=1.19",
]
ml = [
    "torch>=1.9.0",
    "transformers>=4.10.0",
    "datasets>=1.12.0",
]

[project.scripts]
dataset-analyzer = "src.tools.dataset_analyzer:main"
data-preprocessor = "src.tools.data_preprocessor:main"

[project.urls]
Repository = "https://github.com/paredezadrian/open-datasets.git"
Documentation = "https://github.com/paredezadrian/open-datasets/blob/main/conversational-ai-dataset/README.md"
"Bug Tracker" = "https://github.com/paredezadrian/open-datasets/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.json", "*.jsonl", "*.yaml", "*.yml"]

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
